--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <img src="http://www.asiahotel.th1.org/asia-hotel-bangkok/img/rio_grill_l.jpg">
